# devcont

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  docker.yml
docs/: devcontainer-template-plan.md  templates.md
docs/media/: README.md  devcont-node.cast
images/base/: Dockerfile
images/django-nextjs/: Dockerfile  entrypoint.sh
images/django-nextjs/template/: .gitignore  README.md
images/django-nextjs/template/backend/: conftest.py  pyproject.toml
images/django-nextjs/template/backend/api/: tasks.py  urls.py  views.py
images/django-nextjs/template/backend/config/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
images/django-nextjs/template/backend/config/settings/: base.py  local.py  production.py  test.py
images/django-nextjs/template/backend/users/: admin.py  forms.py  managers.py  models.py  serializers.py
images/django-nextjs/template/backend/users/migrations/: 0001_initial.py
images/django-nextjs/template/backend/users/tests/: factories.py  test_admin.py  test_models.py
images/django-nextjs/template/frontend/: package.json
images/django-nextjs/template/frontend/src/app/: layout.tsx  page.tsx
scripts/: smoke.js  validate-spec.sh  validate-templates.js
src/: index.js
src/commands/: attach.js  down.js  init.js  templates.js  up.js
src/templates/: index.js
src/utils/: cli.js  config.js  detect.js
templates/: index.json
templates/_shared/: README.md  init-firewall.sh
templates/compose-multi/: Dockerfile  README.md  devcontainer.json
templates/fullstack/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
templates/generic/: Dockerfile  README.md  devcontainer.json
templates/go/: Dockerfile  README.md  devcontainer.json
templates/node/: Dockerfile  README.md  devcontainer.json
templates/php/: Dockerfile  README.md  devcontainer.json
templates/python/: Dockerfile  README.md  devcontainer.json
templates/python-uv/: Dockerfile  README.md  devcontainer.json
templates/rust/: Dockerfile  README.md  devcontainer.json
test/: cli.test.js  config.test.js  detect.test.js  templates.test.js
