[project]
name = "backend"
version = "0.1.0"
description = "Django REST API backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.9",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5",
    "mypy>=1.11",
    "django-stubs>=5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5",
    "mypy>=1.11",
    "django-stubs>=5.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
